# britfix

./: .gitignore  README.md  britfix.py  britfix_core.py  britfix_hook.py  claude-spell-hook.py  config.json  justfile  programming-exclusions.json  pyproject.toml  run-hook.sh  spell_checker_core.py  spelling-fixer.py  spelling-mapper.json  test_britfix.py  test_spelling_fixer.py
.github/: dependabot.yml
.github/workflows/: ci.yml
