[project]
name = "britfix"
version = "1.0.0"
description = "Convert American spellings to British English"
requires-python = ">=3.9"
dependencies = [
    "colorama>=0.4.6",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0.0",
]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
britfix = "britfix:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
